# split-expense

./: README.md  VERCEL.md  app_data.db  pyproject.toml  requirements.txt
android/app/src/main/java/com/splitt/expense/network/: ApiService.kt  Models.kt
android/app/src/main/java/com/splitt/expense/ui/screens/: EventDetail.kt  OrgDetail.kt
app/: database.py  db_migrate.py  excel_export.py  main.py  models.py  schemas.py  services.py
app/routers/: api.py  web.py
static/: app.css
templates/: event_detail.html  expense_edit.html  org_detail.html
